# HNode_SwitchUI

./: CMakeLists.txt  README.md
cmake/Modules/: FindHNODE_BROWSE.cmake
src/cmdline/: hnode-switch-cmdline.c  hnode-switch-cmdline.h  hnode-switch-interface.h
src/gtk/: gtk-hnode-switch.c  hnode-switch-interface.h
