CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( hnode-switch-ui ) 

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )

FIND_PACKAGE(GLIB REQUIRED)
FIND_PACKAGE(GOBJECT REQUIRED)
FIND_PACKAGE(HNODE_BROWSE REQUIRED)
FIND_PACKAGE(GTK2 2.6 REQUIRED gtk)

INCLUDE_DIRECTORIES( ${GLIB_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GOBJECT_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${HNODE_BROWSE_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GTK2_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/cmdline )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/gtk )

SET( HNODE_SWITCH_UI_CMDLINE_SRC
     ${CMAKE_SOURCE_DIR}/src/cmdline/hnode-switch-cmdline.c 
)

ADD_EXECUTABLE( hnode-switch-cmdline ${HNODE_SWITCH_UI_CMDLINE_SRC} )
TARGET_LINK_LIBRARIES( hnode-switch-cmdline ${GLIB_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode-switch-cmdline ${GOBJECT_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode-switch-cmdline ${HNODE_BROWSE_LIBRARIES} )

SET( HNODE_SWITCH_UI_GTK_SRC
     ${CMAKE_SOURCE_DIR}/src/gtk/gtk-hnode-switch.c 
)

ADD_EXECUTABLE( hnode-switch-gtk ${HNODE_SWITCH_UI_GTK_SRC} )
TARGET_LINK_LIBRARIES( hnode-switch-gtk ${GLIB_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode-switch-gtk ${GOBJECT_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode-switch-gtk ${HNODE_BROWSE_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode-switch-gtk ${GTK2_LIBRARIES} )

INSTALL( TARGETS hnode-switch-cmdline hnode-switch-gtk DESTINATION ${CMAKE_INSTALL_PREFIX}/bin )


SET( CPACK_GENERATOR "DEB" )

#SET( CPACK_PACKAGE_FILE_NAME "lib${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" )
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
 
#SET( CPACK_SET_DESTDIR "on" )
SET( CPACK_PACKAGING_INSTALL_PREFIX "/usr" )

SET( VERSION 1.1-2 )
SET( ${VERSION} CPACK_DEBIAN_PACKAGE_VERSION )
SET( CPACK_DEBIAN_PACKAGE_SECTION "Utilities" )
SET( CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR} )
#SET( CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (> = 2.1.3), libgcc1 (> = 1: 4.1.1)" )

SET( CPACK_PACKAGE_DESCRIPTION "HNode Switch User Interfaces" )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "Command line and GTK UIs for controlling hnode surfaced switches." )
SET( CPACK_PACKAGE_CONTACT "" )
SET( CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${VERSION}_${CPACK_DEBIAN_ARCHITECTURE}" )

INCLUDE(CPack)

